# simplempi

./: CMakeLists.txt
cmake/: generic.cmake
common/: CMakeLists.txt  mpi_gtest_main.cc
framework/: CMakeLists.txt  arena.h  arena_test.cc  macros.h  place.h  place_test.cc  tensor.cc  tensor.h  tensor_test.cc
ps/: CMakeLists.txt  kv.h  kv_map.h  pclient.h  pserver.h  pserver_test.cc  service.proto
